--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -54,10 +54,10 @@ jobs:
           cache-dependency-path: package-lock.json
 
       - name: Install dependencies
-        run: npm ci
+        run: npm install
 
       - name: Run tests
-        run: npm run test:ci
+        run: npm run test
 
       - name: Build
         run: npm run build
